Update 'wnvuz5w0l-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:010c11c8faafd02ef40c2eef2e8c6491aa7ae043@sha256:6d046a61feb83d6377bbdea56426732bb4ca1027d69c783814825b268293e3c9

--- a/components/wnvuz5w0l-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/wnvuz5w0l-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: wnvuz5w0l-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:010c11c8faafd02ef40c2eef2e8c6491aa7ae043@sha256:6d046a61feb83d6377bbdea56426732bb4ca1027d69c783814825b268293e3c9
+          name: container-image
